--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -150,7 +150,7 @@ intensive exercise that requires a substantial degree of expert knowledge.
 Several researchers have attempted to ameliorate the status quo, by either using
 a library to compose GPU code or by compiling a subset of a high-level language
 to low-level GPU code. However, no other proposal has offered a high-level
-interface with the breath and expressivity of operations provide by the
+interface with the breadth and expressivity of operations provided by the
 Accelerate language, together with an implementation whose performance is
 comparable to low-level programming languages.
 
