--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 15 Jan 2015.
+%% Created using Papers on Fri, 16 Jan 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -2891,13 +2891,12 @@ number = {CS2009-14},
 month = dec
 }
 
-@techreport{Levin:1994uu,
-author = {Levin, Gary Marc and Nyland, Lars},
-title = {{An Introduction to Proteus}},
-institution = {Clarkson University and University of North Carolina},
-year = {1994},
-number = {TR95-025},
-month = aug
+@phdthesis{Svensson:2013wd,
+author = {Svensson, Bo Joel},
+title = {{Embedded Languages for Data-Parallel Programming}},
+school = {Department of Computer Science and Engineering, Chalmers University of Technology},
+year = {2013},
+address = {G{\"o}teborg, Sweden}
 }
 
 @book{McCool:2004un,
@@ -2927,6 +2926,15 @@ year = {2006},
 url = {http://www.numpy.org}
 }
 
+@inproceedings{Zhang:2012jl,
+author = {Zhang, Yongpeng and Mueller, F},
+title = {{CuNesl: Compiling Nested Data-Parallel Languages for SIMT Architectures}},
+booktitle = {ICPP '12: The 41st International Conference on Parallel Processing},
+year = {2012},
+pages = {340--349},
+month = sep
+}
+
 @inproceedings{Rossbach:2013bj,
 author = {Rossbach, Christopher J and Yu, Yuan and Currey, Jon and Martin, Jean-Philippe and Fetterly, Dennis},
 title = {{Dandelion: A compiler and runtime for heterogenous sytems}},
@@ -2950,6 +2958,15 @@ title = {{Ott: Effective tool support for the working semanticist}},
 booktitle = {ICFP '07: The 12th ACM SIGPLAN international conference on Functional programming},
 year = {2007},
 month = oct
+}
+
+@techreport{Levin:1994uu,
+author = {Levin, Gary Marc and Nyland, Lars},
+title = {{An Introduction to Proteus}},
+institution = {Clarkson University and University of North Carolina},
+year = {1994},
+number = {TR95-025},
+month = aug
 }
 
 @incollection{Henglein:2013dd,
