--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -175,7 +175,7 @@ supervisor Manuel Chakravarty, so I present here only a brief overview of the
 method; see \cite{McDonell:2013wi} for details. Consider the following source
 term:
 %
-\begin{lstlisting}
+\begin{lstlisting}[style=haskell]
 let inc = (+1) 1
 in let nine = let three = inc 2
               in
