--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -466,6 +466,17 @@ implementation, although both alternatives are possible.
 % in the definition of segmented scans.
 
 
+\subsection{Backpermute}
+\label{sec:backpermute}
+
+The @backpermute@ collective operation is specified by a backwards permutation
+$f$ as an index mapping from the result array $Y$ into a source array $X$, which
+we can write as $f : X \leftarrow Y$. That is, for every index $y$ in $Y$, the
+value at index $y$ is taken from $x = f (y)$ in $X$. Since each element of the
+result can be computed independently of all others, the @backpermute@ operation
+is straightforward to implement. However, it is worth defining here it is not
+commonly found outside of data parallel programming.
+
 \subsection{Permute}
 \label{sec:parallel_permute}
 
@@ -660,16 +671,6 @@ once they have acquired the lock:
         release the lock.
 \end{enumerate}
 
-
-\subsection{Backpermute}
-\label{sec:backpermute}
-
-The @backpermute@ collective operation is specified by a backwards permutation
-$f$ as an index mapping from the result array $Y$ into a source array $X$, which
-we can write as $f : X \leftarrow Y$. That is, for every index $y$ in $Y$, the
-value at index $y$ is taken from $x = f (y)$ in $X$. Although this operation is
-not difficult to implement, it is worth mentioning since it is not commonly
-found outside of data parallel programming.
 
 
 \subsection{Stencil}
