--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sun, 25 Jan 2015.
+%% Created using Papers on Mon, 26 Jan 2015.
 %% http://papersapp.com/papers/
 
 @inproceedings{Chakravarty:2011fr,
@@ -2206,7 +2206,7 @@ year = {2008}
 @incollection{Henglein:2013dd,
 author = {Henglein, Fritz and Hinze, Ralf},
 title = {{Sorting and Searching by Distribution: From Generic Discrimination to Generic Tries}},
-booktitle = {Lecture Notes in Computer Science},
+booktitle = {Programming Languages and Systems},
 year = {2013},
 pages = {315--332},
 publisher = {Springer},
@@ -3360,12 +3360,6 @@ pages = {14--29},
 month = jun
 }
 
-@book{Anonymous:guRbhdEf,
-title = {{link.springer.com}},
-year = {2003},
-month = jun
-}
-
 @inproceedings{Belkhir:2011dd,
 author = {Belkhir, Walid and Giorgetti, Alain},
 title = {{Lazy AC-Pattern Matching for Rewriting}},
@@ -3405,6 +3399,19 @@ volume = {12},
 number = {4-5},
 pages = {393--434},
 month = jul
+}
+
+@incollection{Svenningsson:2013kb,
+author = {Svenningsson, Josef David and Axelsson, Emil},
+title = {{Combining Deep and Shallow Embedding for EDSL}},
+booktitle = {Trends in Functional Programming},
+year = {2013},
+pages = {21--36}
+}
+
+@book{Anonymous:2013tt,
+title = {{LNCS}},
+year = {2013}
 }
 
 @book{Kirk:2010we,
