obsidian: also site Joel's thesis

--- a/sections/03-accelerate.tex
+++ b/sections/03-accelerate.tex
@@ -1090,7 +1090,7 @@ it lacks the more domain-specific language features or compiler optimisations
 offered by Paraiso for this class of problem. Programs in Paraiso are written
 using a monadic style, whereas Accelerate has a purely functional interface.
 
-Obsidian~\cite{Svensson:2008a} and Nikola~\cite{Mainland:2010vj} are embedded
+Obsidian~\cite{Svensson:2008a,Svensson:2013wd} and Nikola~\cite{Mainland:2010vj} are embedded
 languages in Haskell for array programming, both of which are similar in intent
 to Accelerate. Compared to Accelerate, the programming languages of both
 Obsidian and Nikola are severely restricted. Both are limited to a single
