--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -2336,7 +2336,7 @@ This section explores some of these approaches.
 % DirectX shader model, and does not offer higher-order combinators such as @map@
 % and @fold@, but does feature an optimising compiler.
 
-Obsidian~\cite{Svensson:2008a} and Nikola~\cite{Mainland:2010vj} are also
+Obsidian~\cite{Svensson:2008a,Svensson:2013wd} and Nikola~\cite{Mainland:2010vj} are also
 Haskell EDSLs for GPGPU programming, and are in aim and spirit the embeddings
 closest to Accelerate. Both Nikola and Obsidian produce CUDA code as we do,
 however while we use algorithmic skeletons (\S\ref{sec:code_generation}), Nikola
