--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1901,7 +1901,7 @@ are never recomputed.
 
 Obsidian~\cite{Svensson:2008a} is an EDSL in Haskell for GPGPU programming,
 where more details of the GPU hardware are exposed to the programmer. Recent
-versions of Obsidian~\cite{Claessen:2012hl} implement Repa-style delayed
+versions of Obsidian~\cite{Claessen:2012hl,Svensson:2013wd} implement Repa-style delayed
 \emph{pull arrays} as well as \emph{push arrays}. Whereas a pull array
 represents a general producer, a push array represents a general consumer. Push
 arrays allow intermediate programs to be written in continuation passing style
