sec-5: more refs for delayed arrays

--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1124,7 +1124,7 @@ element so that no intermediate array needs to be created.
 
 The approach to array fusion employed by Accelerate is similar to that used by
 Repa~\cite{Keller:2010er,Lippmeier:2011cd,Lippmeier:2012gx}, although the idea
-of representing arrays as functions is well known. It was discovered that one of
+of representing arrays as functions is well known~\cite{Guibas:1978jh,Elliott:2003ug}. It was discovered that one of
 the most immediately pressing problems with delayed arrays in Repa was that it
 did not preserve sharing. In Repa, the conversion between delayed and manifest
 arrays is done manually, where by default shared expressions will be recomputed
