--- a/thesis.bib
+++ b/thesis.bib
@@ -3414,6 +3414,28 @@ title = {{LNCS}},
 year = {2013}
 }
 
+@inproceedings{Guibas:1978jh,
+author = {Guibas, Leo J and Wyatt, Douglas K},
+title = {{Compilation and Delayed Evaluation in APL}},
+booktitle = {POPL '78: The 5th ACM symposium on Principles of Programming Languages},
+year = {1978},
+pages = {1--8}
+}
+
+@incollection{Elliott:2003ug,
+author = {Elliott, Conal},
+title = {{Functional Images}},
+booktitle = {The Fun of Programming},
+year = {2003},
+publisher = {Palgrave}
+}
+
+@book{Gibbons:9BPSWsUV,
+editor = {Gibbons, Jeremy and Moor, Oege de},
+title = {{The Fun of Programming}},
+publisher = {Palgrave}
+}
+
 @book{Kirk:2010we,
 author = {Kirk, David B. and Hwu, Wen-mei W.},
 title = {{Programming Massively Parallel Processors}},
